--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dinner2u" >
+    package="com.example.dinner2u">
 
     <application
         android:allowBackup="true"
@@ -8,12 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DINNER2U" >
-        <activity android:name=".Discover" >
-        </activity>
+        android:theme="@style/Theme.DINNER2U">
+        <activity android:name=".Discover2"></activity>
+        <activity android:name=".Discover"></activity>
         <activity android:name=".Register" />
         <activity android:name=".Login" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
