login + swipe left and right + update of image and text done

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+
+        //comentar la linea de abajo (recomendada por un warning que salia)
         //jcenter() // Warning: this repository is going to shut down soon
     }
 }
