--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DINNER2U">
-        <activity android:name=".Discover2"></activity>
-        <activity android:name=".Discover"></activity>
+        <activity android:name=".Categories"></activity>
+        <activity android:name=".Discover2" />
+        <activity android:name=".Discover" />
         <activity android:name=".Register" />
         <activity android:name=".Login" />
         <activity android:name=".MainActivity">
